--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>API Rest da aplicação Voll.med</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>davisobrinho</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -104,6 +106,11 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.9.1.2184</version>
 			</plugin>
 		</plugins>
 	</build>
